--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ProyectoPaginaWebMaddox</title>
 </head>
 <body>
-    
+    <div class="Menu-Cabecera">
+<ul>
+    <li>Menu1</li>
+    <li>Menu2</li>
+    <li>Menu3</li>
+</ul>
+    </div>
+
+    <div class="Banner">
+<p>Banner</p>
+    </div>
+
+    <div class="CajaColumnas">
+<div class="Columna ColorAzulClaro">1</div>
+<div class="Columna ColorMorado">2</div>
+<div class="Columna">3</div>
+    </div>
+
+    <div class="Banner2">
+<p>Banner2</p>
+    </div>
 </body>
 </html>
