--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="Menu-Cabecera">
-<ul>
-    <li>Menu1</li>
-    <li>Menu2</li>
-    <li>Menu3</li>
+<ul class="MenuSuperior">
+    <li><a href="">Inicio</a></li>
+    <li><a href="">Mis Paginas</a></li>
+    <li><a href="">Contactanos</a></li>
 </ul>
     </div>
 
     <div class="Banner">
-<p>Banner</p>
+<p></p>
     </div>
 
     <div class="CajaColumnas">
