--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
 <p></p>
     </div>
 
-    <div class="CajaColumnas">
-<div class="Columna ColorAzulClaro">1</div>
-<div class="Columna ColorMorado">2</div>
-<div class="Columna">3</div>
+
     </div>
 
-    <div class="Banner2">
-<p>Banner2</p>
+    <div class="CajaColumnas">
+        <div class="Columna ColorAzulClaro"><h2>Mision</h2><p>Bataraza</p></div>
+        <div class="Columna ColorAzulClaro"><h2>Vision</h2><p>Caballo Percherito</p></div>
+        <div class="Columna ColorAzulClaro"><h2>Objetivos</h2><p>Bartolito</p></div>
+            </div>
+
+            <div class="CajaColumnas">
+                <div class="Columna ColorAzulClaro"><img src="imagenes/educacion-financiera.png" alt=""></div>
+                <div class="Columna ColorAzulClaro"><img src="imagenes/investigacion.png" alt=""></div>
+                <div class="Columna ColorAzulClaro"><img src="imagenes/libro.png" alt=""></div>
     </div>
 </body>
 </html>
